storage/innobase/row/row0merge.cc
@@ -411,7 +411,7 @@ row_merge_buf_encode(
 	ulint	extra_size;
 
 	size = rec_get_converted_size_temp(
-		index, entry->fields, n_fields, NULL, &extra_size);
+		index, entry->fields, n_fields, &extra_size);
 	ut_ad(size >= extra_size);
 
 	/* Encode extra_size + 1 */
@@ -424,7 +424,7 @@ row_merge_buf_encode(
 	}
 
 	rec_convert_dtuple_to_temp(*b + extra_size, index,
-				   entry->fields, n_fields, NULL);
+				   entry->fields, n_fields);
 
 	*b += size;
 }
@@ -897,7 +897,7 @@ row_merge_buf_add(
 		ulint	extra;
 
 		size = rec_get_converted_size_temp(
-			index, entry->fields, n_fields, NULL, &extra);
+			index, entry->fields, n_fields, &extra);
 
 		ut_ad(data_size + extra_size == size);
 		ut_ad(extra_size == extra);
